--- a/css/index.css
+++ b/css/index.css
@@ -9,12 +9,12 @@ body {
   background-color: #F5F5F5;
 }
 
-header #logo {
+.main-container #detail article, header #logo {
   display: flex;
   justify-content: center;
 }
 
-#reservation {
+.main-container #detail, #reservation {
   display: flex;
   flex-direction: column;
 }
@@ -72,7 +72,57 @@ header .location input {
   font-size: 16px;
   font-weight: 500;
   border: none;
+  cursor: pointer;
   margin: 20px 0px 50px 5px;
+}
+
+/**** section-fonctionnement ****/
+.main-container #fonctionnement {
+  background-color: #FFFFFF;
+}
+.main-container #fonctionnement .container {
+  padding: 50px 20px;
+}
+.main-container #detail {
+  padding: 0 0 50px 12px;
+}
+.main-container #detail article {
+  justify-content: unset;
+  align-items: center;
+  padding: 25px;
+  background: #F6F6F6;
+  border-radius: 20px;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1450980392);
+}
+.main-container #detail article i {
+  margin: 0px 12px;
+  color: #7E7E7E;
+  font-size: 19px;
+}
+.main-container #detail article p {
+  font-weight: 500;
+  margin-left: 15px;
+}
+.main-container #detail article:hover i {
+  color: #9356DC;
+}
+.main-container #detail div {
+  position: relative;
+  margin-top: 25px;
+  text-align: center;
+}
+.main-container #detail span {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: -12px;
+  width: 24px;
+  border-radius: 50%;
+  background-color: #9356DC;
+  color: #FFFFFF;
+  line-height: 24px;
+  font-size: 14px;
+  font-weight: 500;
 }
 
 /*# sourceMappingURL=index.css.map */
