--- a/sass/pages/_style.scss
+++ b/sass/pages/_style.scss
@@ -88,7 +88,7 @@ header {
             @extend %flex-center;
             justify-content: unset;
             align-items: center;
-            padding: 25px;
+            padding: 25px 20px 25px 20px;
             background: #F6F6F6;
             border-radius: 20px;
             box-shadow: 0px 4px 15px 0px $shadow;
@@ -101,7 +101,7 @@ header {
 
             p {
                 font-weight: 500;
-                margin-left: 15px;
+                margin-left: 10px;
             }
 
         }
