--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,17 @@ body {
   background-color: #F5F5F5;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.container {
+  max-width: 1140px;
+  margin: auto;
+  padding: 50px 20px;
+}
+
 .main-container #detail article, header #logo {
   display: flex;
   justify-content: center;
@@ -29,6 +40,7 @@ header #logo img {
   margin: 19px 0px;
 }
 header .location {
+  position: relative;
   text-align: center;
   background-color: #EAEAEA;
   padding: 16px 0px 15px 55px;
@@ -80,11 +92,8 @@ header .location input {
 .main-container #fonctionnement {
   background-color: #FFFFFF;
 }
-.main-container #fonctionnement .container {
-  padding: 50px 20px;
-}
 .main-container #detail {
-  padding: 0 0 50px 12px;
+  padding: 0 0 0 12px;
 }
 .main-container #detail article {
   justify-content: unset;
@@ -123,6 +132,57 @@ header .location input {
   line-height: 24px;
   font-size: 14px;
   font-weight: 500;
+}
+.main-container #card-container {
+  margin: 20px 0 20px 0;
+}
+
+.card {
+  background-color: #FFFFFF;
+  height: 210px;
+  border-radius: 15px;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1019607843);
+  position: relative;
+  margin-bottom: 18px;
+}
+.card img {
+  width: 100%;
+  height: 140px;
+  object-fit: cover;
+  border-radius: 15px 15px 0px 0px;
+  display: block;
+}
+.card .new {
+  background-color: #99E2D0;
+  width: 80px;
+  height: 29px;
+  border-radius: 2px;
+  color: #008766;
+  font-size: 14px;
+  font-weight: 500;
+  border: none;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1450980392);
+  position: absolute;
+  top: 25px;
+  left: 82%;
+  transform: translate(-50%, -50%);
+}
+.card .card__content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 15px 20px 15px 10px;
+}
+.card .card__content h3 {
+  font-size: 18px;
+}
+.card .card__content p {
+  font-weight: 300;
+}
+.card .card__content .heart {
+  position: relative;
+  cursor: pointer;
+  font-size: 22px;
 }
 
 /*# sourceMappingURL=index.css.map */
