--- a/sass/_/_global.scss
+++ b/sass/_/_global.scss
@@ -10,3 +10,14 @@
 body {
     background-color: $gray-light;
 }
+
+a {
+    text-decoration: none; 
+    color: inherit; 
+  }
+
+.container {
+    max-width: 1140px;
+    margin: auto;
+    padding: 50px 20px;
+}
