--- a/css/index.css
+++ b/css/index.css
@@ -56,6 +56,8 @@ header .location input {
   outline: none;
   font-size: 16px;
   font-weight: 500;
+}
+header .location input::placeholder {
   color: #353535;
 }
 
