--- a/sass/pages/_style.scss
+++ b/sass/pages/_style.scss
@@ -33,7 +33,9 @@ header {
             outline: none;
             font-size: 16px;
             font-weight: 500;
-            color: $gray-dark;
+            &::placeholder {
+                color: $gray-dark;
+            }
         }
     }
 }
