--- a/css/index.css
+++ b/css/index.css
@@ -20,12 +20,12 @@ a {
   padding: 50px 20px;
 }
 
-.main-container #detail article, header #logo {
+.main-container #fonctionnement #detail article, header #logo {
   display: flex;
   justify-content: center;
 }
 
-.main-container #detail, #reservation {
+.main-container #fonctionnement #detail, #reservation {
   display: flex;
   flex-direction: column;
 }
@@ -71,10 +71,21 @@ header .location input::placeholder {
   margin: 0px 35px 0px 47px;
   padding: 30px 0px 10px 0px;
 }
+@media screen and (min-width: 1024px) {
+  #reservation h1 {
+    font-size: 40px;
+    margin-bottom: 20px;
+  }
+}
 #reservation h2 {
   font-size: 17px;
   font-weight: 300;
   margin: 0 10px;
+}
+@media screen and (min-width: 1024px) {
+  #reservation h2 {
+    font-size: 18px;
+  }
 }
 #reservation button {
   background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
@@ -94,10 +105,19 @@ header .location input::placeholder {
 .main-container #fonctionnement {
   background-color: #FFFFFF;
 }
-.main-container #detail {
+.main-container #fonctionnement #detail {
   padding: 0 0 0 12px;
 }
-.main-container #detail article {
+@media screen and (min-width: 768px) {
+  .main-container #fonctionnement #detail {
+    flex-direction: row;
+  }
+  .main-container #fonctionnement #detail div {
+    width: 100%;
+    padding-right: 40px;
+  }
+}
+.main-container #fonctionnement #detail article {
   justify-content: unset;
   align-items: center;
   padding: 25px 20px 25px 20px;
@@ -105,24 +125,29 @@ header .location input::placeholder {
   border-radius: 20px;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1450980392);
 }
-.main-container #detail article i {
+.main-container #fonctionnement #detail article i {
   margin: 0px 12px;
   color: #7E7E7E;
   font-size: 19px;
 }
-.main-container #detail article p {
+.main-container #fonctionnement #detail article p {
   font-weight: 500;
   margin-left: 10px;
 }
-.main-container #detail article:hover i {
+@media screen and (min-width: 768px) {
+  .main-container #fonctionnement #detail article p {
+    text-align: left;
+  }
+}
+.main-container #fonctionnement #detail article:hover i {
   color: #9356DC;
 }
-.main-container #detail div {
+.main-container #fonctionnement #detail div {
   position: relative;
   margin-top: 25px;
   text-align: center;
 }
-.main-container #detail span {
+.main-container #fonctionnement #detail span {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -137,6 +162,15 @@ header .location input::placeholder {
 }
 .main-container #card-container {
   margin: 20px 0 20px 0;
+}
+@media screen and (min-width: 768px) {
+  .main-container #card-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    row-gap: 50px;
+    column-gap: 100px;
+  }
 }
 
 .card {
@@ -169,6 +203,11 @@ header .location input::placeholder {
   left: 82%;
   transform: translate(-50%, -50%);
 }
+@media screen and (min-width: 1024px) {
+  .card .new {
+    left: 88%;
+  }
+}
 .card .card__content {
   display: flex;
   justify-content: space-between;
@@ -192,6 +231,19 @@ footer {
   color: #FFFFFF;
   padding: 22px 25px;
 }
+@media screen and (min-width: 768px) {
+  footer {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    padding: 60px 20px 25px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  footer {
+    padding: 60px 50px 25px;
+  }
+}
 footer h3 {
   font-family: Shrikhand;
   font-size: 18px;
@@ -199,16 +251,33 @@ footer h3 {
   font-style: italic;
   margin-bottom: 16px;
 }
+@media screen and (min-width: 768px) {
+  footer h3 {
+    margin-bottom: 0;
+    margin-left: 40px;
+  }
+}
 footer ul {
   list-style: none;
+}
+@media screen and (min-width: 768px) {
+  footer ul {
+    display: flex;
+  }
+  footer ul li:nth-child(3) {
+    margin-left: 30px;
+  }
 }
 footer ul li {
   margin-top: 5px;
 }
-footer ul li i {
-  font-size: 13px;
+@media screen and (min-width: 768px) {
+  footer ul li {
+    margin-right: 10px;
+  }
 }
 footer ul li i {
+  font-size: 13px;
   margin-right: 12px;
 }
 
