--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,28 +3,53 @@ footer {
     color: $white;
     padding: 22px 25px;
 
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        padding: 60px 20px 25px;
+    }
+
+    @media screen and (min-width: 1024px) {
+        padding: 60px 50px 25px;
+    }
+    
     h3 {
         font-family: Shrikhand;
         font-size: 18px;
         font-weight: bold;
         font-style: italic;
         margin-bottom: 16px;
+
+        @media screen and (min-width: 768px) {
+            margin-bottom: 0;
+            margin-left: 40px;
+        }
     }
 
     ul {
         list-style: none;
 
+        @media screen and (min-width: 768px) {
+            display: flex;
+
+            li:nth-child(3){
+                margin-left: 30px;
+            }
+        }
+            
         li {
             margin-top: 5px;
 
-            i {
-                font-size: 13px;
+            @media screen and (min-width: 768px) {
+                margin-right: 10px;
             }
 
             i {
+                font-size: 13px;
                 margin-right: 12px;
             }
         }
-    }
 
+    }
 }
