--- a/sass/pages/_style.scss
+++ b/sass/pages/_style.scss
@@ -50,12 +50,21 @@ header {
     h1 {
         margin: 0px 35px 0px 47px;
         padding: 30px 0px 10px 0px;
+
+        @media screen and (min-width: 1024px) {
+            font-size: 40px;
+            margin-bottom: 20px;
+        }
     }
 
     h2 {
         font-size: 17px;
         font-weight: 300;
         margin: 0 10px;
+
+        @media screen and (min-width: 1024px) {
+            font-size: 18px;
+        }
     }
 
     button {
@@ -77,63 +86,84 @@ header {
 .main-container {
     #fonctionnement {
         background-color: $white;
-    }
 
-    #detail {
-        @extend %flex-column;
-        padding: 0 0 0 12px;     
+        #detail {
+            @extend %flex-column;
+            padding: 0 0 0 12px;
 
-        article {
-            @extend %flex-center;
-            justify-content: unset;
-            align-items: center;
-            padding: 25px 20px 25px 20px;
-            background: #F6F6F6;
-            border-radius: 20px;
-            box-shadow: 0px 4px 15px 0px $shadow;
+            @media screen and (min-width: 768px) {
+                flex-direction: row;
 
-            i {
-                margin: 0px 12px;
-                color: #7E7E7E;
-                font-size: 19px;
+                div {
+                    width: 100%;
+                    padding-right: 40px;
+                }
             }
 
-            p {
+            article {
+                @extend %flex-center;
+                justify-content: unset;
+                align-items: center;
+                padding: 25px 20px 25px 20px;
+                background: #F6F6F6;
+                border-radius: 20px;
+                box-shadow: 0px 4px 15px 0px $shadow;
+
+                i {
+                    margin: 0px 12px;
+                    color: #7E7E7E;
+                    font-size: 19px;
+                }
+
+                p {
+                    font-weight: 500;
+                    margin-left: 10px;
+
+                    @media screen and (min-width: 768px) {
+                        text-align: left;
+                    }
+                }
+            }
+
+            article:hover {
+                i {
+                    color: $primary;
+                }
+            }
+
+            div {
+                position: relative;
+                margin-top: 25px;     
+                text-align: center;       
+            }
+
+            span {
+                position: absolute;
+                top: 50%;
+                transform: translateY(-50%);
+                left: -12px;
+                width: 24px;
+                border-radius: 50%;
+                background-color: $primary;
+                color: $white;
+                line-height: 24px;
+                font-size: 14px;
                 font-weight: 500;
-                margin-left: 10px;
             }
 
         }
-
-        article:hover {
-            i {
-                color: $primary;
-            }
-        }
-
-        div {
-            position: relative;
-            margin-top: 25px;     
-            text-align: center;       
-        }
-
-        span {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            left: -12px;
-            width: 24px;
-            border-radius: 50%;
-            background-color: $primary;
-            color: $white;
-            line-height: 24px;
-            font-size: 14px;
-            font-weight: 500;
-        }
-
     }
-    
+
     #card-container {
         margin: 20px 0 20px 0;
+
+        @media screen and (min-width: 768px) {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr;
+            row-gap: 50px;
+            column-gap: 100px;            
+        }
+    
     }
 }
