--- a/css/index.css
+++ b/css/index.css
@@ -247,14 +247,14 @@ footer {
 footer h3 {
   font-family: Shrikhand;
   font-size: 18px;
-  font-weight: bold;
+  font-weight: 400;
   font-style: italic;
   margin-bottom: 16px;
 }
 @media screen and (min-width: 768px) {
   footer h3 {
     margin-bottom: 0;
-    margin-left: 40px;
+    margin-left: 30px;
   }
 }
 footer ul {
