--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -17,13 +17,13 @@ footer {
     h3 {
         font-family: Shrikhand;
         font-size: 18px;
-        font-weight: bold;
+        font-weight: 400;
         font-style: italic;
         margin-bottom: 16px;
 
         @media screen and (min-width: 768px) {
             margin-bottom: 0;
-            margin-left: 40px;
+            margin-left: 30px;
         }
     }
 
