--- a/css/index.css
+++ b/css/index.css
@@ -46,6 +46,11 @@ header .location {
   padding: 16px 0px 15px 55px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2509803922);
 }
+@media screen and (min-width: 768px) {
+  header .location {
+    box-shadow: none;
+  }
+}
 header .location i {
   margin: 0px 10px 0px 6px;
   color: #353535;
