--- a/sass/pages/_style.scss
+++ b/sass/pages/_style.scss
@@ -22,6 +22,10 @@ header {
         padding: 16px 0px 15px 55px;
         box-shadow: 0px 4px 4px 0px #00000040;
 
+        @media screen and (min-width: 768px) {
+            box-shadow: none;
+        }
+
         i {
             margin: 0px 10px 0px 6px;
             color: $gray-dark;
