--- a/css/index.css
+++ b/css/index.css
@@ -93,7 +93,7 @@ header .location input::placeholder {
   }
 }
 #reservation button {
-  background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+  background: linear-gradient(0deg, #9356DC, #FF79DA);
   color: #FFFFFF;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.2509803922);
   width: 218px;
@@ -104,6 +104,10 @@ header .location input::placeholder {
   border: none;
   cursor: pointer;
   margin: 20px 0px 50px 5px;
+}
+#reservation button:hover {
+  opacity: 0.83;
+  transition: 0.5s;
 }
 
 /**** section-fonctionnement ****/
@@ -135,6 +139,9 @@ header .location input::placeholder {
   color: #7E7E7E;
   font-size: 19px;
 }
+.main-container #fonctionnement #detail article .fa--active {
+  color: #9356DC;
+}
 .main-container #fonctionnement #detail article p {
   font-weight: 500;
   margin-left: 10px;
@@ -143,9 +150,6 @@ header .location input::placeholder {
   .main-container #fonctionnement #detail article p {
     text-align: left;
   }
-}
-.main-container #fonctionnement #detail article:hover i {
-  color: #9356DC;
 }
 .main-container #fonctionnement #detail div {
   position: relative;
@@ -226,9 +230,24 @@ header .location input::placeholder {
   font-weight: 300;
 }
 .card .card__content .heart {
-  position: relative;
   cursor: pointer;
   font-size: 22px;
+}
+.card .card__content .heart .menu-liked--outline {
+  position: absolute;
+  margin-top: 2px;
+}
+.card .card__content .heart .menu-liked--outline:before {
+  background-color: white;
+}
+.card .card__content .heart:active .menu-liked--outline {
+  opacity: 0;
+}
+.card .card__content .heart:active .menu-liked--solid {
+  background: linear-gradient(160deg, #9356dc 0%, #ff79da 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  opacity: 1;
 }
 
 footer {
