--- a/sass/components/_boutton.scss
+++ b/sass/components/_boutton.scss
@@ -1,5 +1,5 @@
 button {
-    background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+    background: linear-gradient(0deg, #9356dc, #ff79da);
     color: $white;
     box-shadow: 0px 4px 10px 0px #00000040;
     width: 218px;
@@ -10,4 +10,9 @@ button {
     border: none;
     cursor: pointer;
     margin: 20px 0px 50px 5px;
+}
+
+button:hover {
+    opacity: 0.83;
+    transition: 0.5s;
 }
