--- a/sass/pages/_style.scss
+++ b/sass/pages/_style.scss
@@ -72,7 +72,7 @@ header {
     }
 
     button {
-        background: linear-gradient(193.33deg, $primary -11.44%, $secondary 123.93%);
+        background: linear-gradient(0deg, $primary, $secondary);
         color: $white;
         box-shadow: 0px 4px 10px 0px #00000040;
         width: 218px;
@@ -83,6 +83,11 @@ header {
         border: none;
         cursor: pointer;
         margin: 20px 0px 50px 5px;
+    }
+
+    button:hover {
+        opacity: 0.83;
+        transition: 0.5s;
     }
 }
 
@@ -119,6 +124,10 @@ header {
                     font-size: 19px;
                 }
 
+                .fa--active{
+                    color: $primary;
+                }
+
                 p {
                     font-weight: 500;
                     margin-left: 10px;
@@ -126,12 +135,6 @@ header {
                     @media screen and (min-width: 768px) {
                         text-align: left;
                     }
-                }
-            }
-
-            article:hover {
-                i {
-                    color: $primary;
                 }
             }
 
