--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -65,6 +65,7 @@
                 }
                 .menu-liked--solid {
                     background: linear-gradient(160deg, #9356dc 0%, #ff79da 100%);
+                    background-clip: text;
                     -webkit-background-clip: text;
                     -webkit-text-fill-color: transparent;
                     opacity: 1;
