--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -120,6 +120,7 @@ main #background .title-container .heart:active .menu-liked--outline {
 }
 main #background .title-container .heart:active .menu-liked--solid {
   background: linear-gradient(160deg, #9356dc 0%, #ff79da 100%);
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   opacity: 1;
