--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -97,6 +97,7 @@ main {
                     }
                     .menu-liked--solid {
                         background: linear-gradient(160deg, #9356dc 0%, #ff79da 100%);
+                        background-clip: text;
                         -webkit-background-clip: text;
                         -webkit-text-fill-color: transparent;
                         opacity: 1;
