--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -103,27 +103,36 @@ main #background .title-container h1 {
     margin-right: 20px;
   }
 }
-main #background .title-container .heart {
-  margin-right: 20px;
-  cursor: pointer;
+main #background .title-container .like-form {
+  position: relative;
   font-size: 22px;
 }
-main #background .title-container .heart .menu-liked--outline {
-  position: absolute;
-  margin-top: 2px;
+main #background .title-container .like_button {
+  display: none;
 }
-main #background .title-container .heart .menu-liked--outline:before {
-  background-color: white;
+main #background .title-container .like_button:not(:checked) ~ .fav-label {
+  cursor: pointer;
 }
-main #background .title-container .heart:active .menu-liked--outline {
-  opacity: 0;
+main #background .title-container .like_button:not(:checked) ~ .fav-label .fa-solid {
+  display: none;
 }
-main #background .title-container .heart:active .menu-liked--solid {
-  background: linear-gradient(160deg, #9356dc 0%, #ff79da 100%);
-  background-clip: text;
+main #background .title-container .like_button:not(:checked) ~ .fav-label .fa-regular {
+  display: inline-block;
+}
+main #background .title-container .like_button:checked ~ .fav-label {
+  cursor: pointer;
+}
+main #background .title-container .like_button:checked ~ .fav-label .fa-solid {
+  display: inline-block;
+}
+main #background .title-container .like_button:checked ~ .fav-label .fa-regular {
+  display: none;
+}
+main #background .title-container .fa-heart.fa-solid {
+  background-image: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  opacity: 1;
+  background-clip: text;
+  color: transparent;
 }
 main #btn {
   flex-wrap: wrap;
