--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -30,6 +30,25 @@ main #btn {
   flex-direction: column;
 }
 
+@keyframes fadeIn_h2 {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes fadeIn_card-restau {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 body {
   background-color: #FFFFFF;
 }
@@ -152,6 +171,7 @@ main .cards-restau h2 {
   border-bottom: 3px solid #99e2d0;
   width: 40px;
   text-transform: uppercase;
+  animation: fadeIn_h2 300ms ease-in-out;
 }
 main .cards-restau .card-restau {
   display: flex;
@@ -161,6 +181,7 @@ main .cards-restau .card-restau {
   margin: 15px 0px;
   box-shadow: 0px 4.0114941597px 15.0431032181px 0px rgba(0, 0, 0, 0.1019607843);
   border-radius: 15px;
+  animation: fadeIn_card-restau 300ms ease-in-out;
 }
 main .cards-restau .card-restau h3 {
   font-size: 18px;
@@ -184,6 +205,10 @@ main .cards-restau .card-restau .card-price span {
 }
 main .cards-restau .card-restau .card-anim {
   display: none;
+}
+main .cards-restau h2, main .cards-restau .card-restau {
+  animation-fill-mode: both;
+  animation-delay: calc((var(--anim-order) - 1) * 200ms);
 }
 
 button {
