--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -2,6 +2,43 @@
 @import "./../_/_variables";
 @import "./../_/_placeholders";
 
+@keyframes fadeIn_h2 {
+    0% {
+        opacity: 0;
+    }
+    25% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeIn_card-restau {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+$animDuration: 300ms;
+$intervalBetween2AnimationStarting: 200ms;
+
+// .cards-restau {
+//     &:checked + .card-restau {
+//         .card-content .card-price, .card-anim  {
+//             transform: translateX(0);
+//         }
+//     }
+//     &:not(:checked) + .card-restau {
+//         .card-content .card-price, .card-anim  {
+//             transform: translateX(59px);
+//         }
+//     }
+// }
+
 body {
     background-color: $white;
 }
@@ -134,6 +171,7 @@ main {
             border-bottom: 3px solid #99e2d0;
             width: 40px;
             text-transform: uppercase;
+            animation: fadeIn_h2 #{$animDuration} ease-in-out;
         }
         .card-restau {
             display: flex;
@@ -143,6 +181,7 @@ main {
             margin: 15px 0px;
             box-shadow: 0px 4.011494159698486px 15.043103218078613px 0px #0000001a;
             border-radius: 15px;
+            animation: fadeIn_card-restau #{$animDuration} ease-in-out;
             h3 {
                 font-size: 18px;
                 font-weight: 500;
@@ -164,14 +203,23 @@ main {
                 }
             }
             .card-anim{
-                    // background-color: #99e2d0;
-                    // color: $white;
-                    // font-size: 20px;
-                    // padding: 23px 20px;
-                    // border-radius: 0 15px 15px 0;
-                    display: none;
-                    
+                // background-color: #99e2d0;
+                // color: $white;
+                // font-size: 20px;
+                // padding: 23px 20px;
+                // border-radius: 0 15px 15px 0;
+                display: none;
             }
+
+            // .card-price, .card-anim {
+            //     transform: translateX(59px);
+            //     transition: transform 175ms linear;
+            // }
+        }
+
+        h2, .card-restau {
+            animation-fill-mode: both;
+            animation-delay: calc((var(--anim-order) - 1) * $intervalBetween2AnimationStarting);
         }
     }
 }
