--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,4 +1,6 @@
 @import "pages/_style";
 @import "components/cards";
+@import "components/heart";
 @import "layout/footer";
 @import "layout/loader";
+@import "layout/scroll";
