--- a/sass/layout/_loader.scss
+++ b/sass/layout/_loader.scss
@@ -8,6 +8,7 @@
         opacity: 1;
     }
     100% {
+        z-index: -5;
         opacity: 0;
     }
 }
@@ -30,14 +31,12 @@
 $interval: 0.2;
 
 .loader {
-    // overflow: hidden;
-    // overflow-y: hidden;
-    position: absolute;
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
-    // height: 100%;
     height: 100vh;
-    display: flex;
-    flex-direction: column;
+    @extend %flex-column;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -52,8 +51,7 @@ $interval: 0.2;
         margin-bottom: 20px;
     }
     &__stagger {
-        display: flex;
-        flex-direction: row;
+        @extend %flex-row;
         justify-content: space-between;
         align-items: center;
         gap: 10px;
@@ -63,8 +61,6 @@ $interval: 0.2;
         background-color: white;
         width: 5px;
         height: 5px;
-        // margin-left: 5px;
-        // margin-right: 5px;
         border-radius: 100%;
         opacity: 0.3;
         animation-name: loading;
