--- a/sass/pages/_style.scss
+++ b/sass/pages/_style.scss
@@ -88,6 +88,7 @@ header {
     button:hover {
         opacity: 0.83;
         transition: 0.5s;
+        box-shadow: 0px 4px 15px 0px #00000059;
     }
 }
 
