--- a/sass/restaurant.scss
+++ b/sass/restaurant.scss
@@ -1,3 +1,5 @@
 @import "pages/_restaurant";
+@import "components/heart";
+@import "components/check";
 @import "components/boutton";
 @import "layout/footer";
