--- a/sass/components/_boutton.scss
+++ b/sass/components/_boutton.scss
@@ -1,5 +1,5 @@
 button {
-    background: linear-gradient(0deg, #9356dc, #ff79da);
+    background: linear-gradient(0deg, $primary, $secondary);
     color: $white;
     box-shadow: 0px 4px 10px 0px #00000040;
     width: 218px;
