--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,6 +1,7 @@
 @import "pages/_style";
 @import "components/cards";
 @import "components/heart";
+@import "components/check";
 @import "layout/footer";
 @import "layout/loader";
 @import "layout/scroll";
