--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   font-family: "Roboto", sans-serif;
   padding: 0px;
@@ -20,12 +21,12 @@ a {
   padding: 50px 20px;
 }
 
-.main-container #fonctionnement #detail article, header #logo {
+.header-restaurant, .main-container #fonctionnement #detail article, .header-homepage #logo {
   display: flex;
   justify-content: center;
 }
 
-.loader, .main-container #fonctionnement #detail, #reservation {
+.loader, main #btn, .main-container #fonctionnement #detail, #reservation {
   display: flex;
   flex-direction: column;
 }
@@ -36,15 +37,15 @@ a {
 }
 
 /****  header  ****/
-header #logo {
+.header-homepage #logo {
   background-color: #FFFFFF;
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1450980392);
 }
-header #logo img {
+.header-homepage #logo img {
   width: 162px;
   margin: 19px 0px;
 }
-header .location {
+.header-homepage .location {
   position: relative;
   text-align: center;
   background-color: #EAEAEA;
@@ -52,22 +53,22 @@ header .location {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2509803922);
 }
 @media screen and (min-width: 768px) {
-  header .location {
+  .header-homepage .location {
     box-shadow: none;
   }
 }
-header .location i {
+.header-homepage .location i {
   margin: 0px 10px 0px 6px;
   color: #353535;
 }
-header .location input {
+.header-homepage .location input {
   border: none;
   background: none;
   outline: none;
   font-size: 16px;
   font-weight: 500;
 }
-header .location input::placeholder {
+.header-homepage .location input::placeholder {
   color: #353535;
 }
 
@@ -188,6 +189,214 @@ header .location input::placeholder {
   }
 }
 
+@keyframes fadeIn_h2 {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes fadeIn_card-restau {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+body {
+  background-color: #FFFFFF;
+}
+
+.header-restaurant {
+  height: 63px;
+  align-items: center;
+}
+.header-restaurant #logo {
+  font-family: Shrikhand;
+  font-size: 30px;
+}
+.header-restaurant #return {
+  position: absolute;
+  color: #353535;
+  font-size: 18px;
+  left: 25px;
+}
+
+main .banner img {
+  width: 100%;
+  object-fit: cover;
+  height: 260px;
+}
+@media screen and (min-width: 768px) {
+  main .banner img {
+    height: 360px;
+  }
+}
+main #background {
+  border-radius: 40px 40px 0 0;
+  background-color: #f6f6f6;
+  position: relative;
+  margin-top: -50px;
+  padding: 30px 10px;
+}
+@media screen and (min-width: 768px) {
+  main #background {
+    width: 90%;
+    margin-left: 5%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  main #background {
+    width: 80%;
+    margin-left: 10%;
+  }
+  main #background .main-container {
+    width: 60%;
+    margin: auto;
+  }
+}
+main #background .title-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 18px;
+}
+@media screen and (min-width: 1024px) {
+  main #background .title-container {
+    justify-content: center;
+  }
+}
+main #background .title-container h1 {
+  font-family: Shrikhand;
+  font-size: 25px;
+  font-weight: 400;
+}
+@media screen and (min-width: 1024px) {
+  main #background .title-container h1 {
+    margin-right: 20px;
+  }
+}
+main #btn {
+  flex-wrap: wrap;
+  align-content: center;
+  margin-top: 40px;
+}
+main #btn button {
+  background: linear-gradient(0deg, #9356DC, #FF79DA);
+  color: #FFFFFF;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.2509803922);
+  width: 186px;
+  height: 50px;
+  border-radius: 25px;
+  font-size: 16px;
+  font-weight: 500;
+  border: none;
+  cursor: pointer;
+}
+main #btn button:hover {
+  opacity: 0.83;
+  transition: 0.5s;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.3490196078);
+}
+main .cards-restau {
+  margin-top: 20px;
+}
+main .cards-restau h2 {
+  font-size: 16px;
+  font-weight: 300;
+  border-bottom: 3px solid #99e2d0;
+  width: 40px;
+  text-transform: uppercase;
+  animation: fadeIn_h2 300ms ease-in-out;
+}
+main .cards-restau .card-restau {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #FFFFFF;
+  margin: 15px 0px;
+  box-shadow: 0px 4.0114941597px 15.0431032181px 0px rgba(0, 0, 0, 0.1019607843);
+  border-radius: 15px;
+  animation: fadeIn_card-restau 300ms ease-in-out;
+}
+main .cards-restau .card-restau h3 {
+  font-size: 18px;
+  font-weight: 500;
+  margin-bottom: 5px;
+}
+main .cards-restau .card-restau .card-content {
+  margin: 10px 0px 10px 10px;
+}
+main .cards-restau .card-restau .card-content h4 {
+  font-size: 15.04px;
+  font-weight: 300;
+}
+@media screen and (max-width: 450px) {
+  main .cards-restau .card-restau .card-content h3, main .cards-restau .card-restau .card-content h4 {
+    width: 174px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
+main .cards-restau .card-restau .card-animation-container {
+  right: 0;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  transition: transform 175ms ease-in-out, opacity 175ms ease-in-out;
+}
+main .cards-restau .card-restau .card-animation-container .card-price {
+  margin: 25px 0 0 auto;
+}
+main .cards-restau .card-restau .card-animation-container .card-price span {
+  font-size: 15.04px;
+  font-weight: 700;
+  padding: 0px 10px 0px 0px;
+  margin-left: 20px;
+}
+main .cards-restau .card-restau .card-animation-container .card-anim {
+  display: flex;
+  background-color: #99E2D0;
+  color: #FFFFFF;
+  font-size: 20px;
+  padding: 23px 20px;
+  border-radius: 0 15px 15px 0;
+}
+main .cards-restau .card-restau .card-animation-container .card-anim span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 15px;
+  background-color: #FFFFFF;
+  color: #99E2D0;
+  text-align: center;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+}
+main .cards-restau .card-restau .card-price, main .cards-restau .card-restau .card-anim {
+  opacity: 1;
+  transition: transform 175ms ease-in-out, opacity 175ms ease-in-out;
+}
+main .cards-restau .card-restau .selector__label {
+  cursor: pointer;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+}
+main .cards-restau h2, main .cards-restau .card-restau {
+  animation-fill-mode: both;
+  animation-delay: calc((var(--anim-order) - 1) * 200ms);
+}
+
 .card {
   background-color: #FFFFFF;
   height: 251px;
@@ -268,6 +477,11 @@ header .location input::placeholder {
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
+}
+
+.selector:not(:checked) + .card-restau .card-animation-container .card-price,
+.selector:not(:checked) + .card-restau .card-animation-container .card-anim {
+  transform: translateX(100%); /* Déplacer la carte animée en dehors de la vue */
 }
 
 footer {
