add span for .new + add button component

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -2,6 +2,7 @@
 @import "components/cards";
 @import "components/heart";
 @import "components/check";
+@import "components/button";
 @import "layout/footer";
 @import "layout/loader";
 @import "layout/scroll";
