--- a/css/index.css
+++ b/css/index.css
@@ -98,24 +98,6 @@ a {
     font-size: 18px;
   }
 }
-#reservation button {
-  background: linear-gradient(0deg, #9356DC, #FF79DA);
-  color: #FFFFFF;
-  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.2509803922);
-  width: 218px;
-  height: 50px;
-  border-radius: 25px;
-  font-size: 16px;
-  font-weight: 500;
-  border: none;
-  cursor: pointer;
-  margin: 20px 0px 50px 5px;
-}
-#reservation button:hover {
-  opacity: 0.83;
-  transition: 0.5s;
-  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.3490196078);
-}
 
 /**** section-fonctionnement ****/
 .main-container #fonctionnement {
@@ -287,21 +269,7 @@ main #btn {
   margin-top: 40px;
 }
 main #btn button {
-  background: linear-gradient(0deg, #9356DC, #FF79DA);
-  color: #FFFFFF;
-  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.2509803922);
   width: 186px;
-  height: 50px;
-  border-radius: 25px;
-  font-size: 16px;
-  font-weight: 500;
-  border: none;
-  cursor: pointer;
-}
-main #btn button:hover {
-  opacity: 0.83;
-  transition: 0.5s;
-  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.3490196078);
 }
 main .cards-restau {
   margin-top: 20px;
@@ -413,6 +381,9 @@ main .cards-restau h2, main .cards-restau .card-restau {
   display: block;
 }
 .card .new {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #99E2D0;
   width: 80px;
   height: 29px;
@@ -482,6 +453,26 @@ main .cards-restau h2, main .cards-restau .card-restau {
 .selector:not(:checked) + .card-restau .card-animation-container .card-price,
 .selector:not(:checked) + .card-restau .card-animation-container .card-anim {
   transform: translateX(100%); /* Déplacer la carte animée en dehors de la vue */
+}
+
+button {
+  background: linear-gradient(0deg, #9356DC, #FF79DA);
+  color: #FFFFFF;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.2509803922);
+  width: 218px;
+  height: 50px;
+  border-radius: 25px;
+  font-size: 16px;
+  font-weight: 500;
+  border: none;
+  cursor: pointer;
+  margin: 20px 0px 50px 5px;
+}
+
+button:hover {
+  opacity: 0.83;
+  transition: 0.5s;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.3490196078);
 }
 
 footer {
