--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -14,6 +14,9 @@
         display: block;  
     }
     .new {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         background-color:$tertiary;
         width: 80px;
         height: 29px;
