input+label error correction

--- a/css/index.css
+++ b/css/index.css
@@ -419,6 +419,15 @@ main .cards-restau h2, main .cards-restau .card-restau {
 .like-form {
   position: relative;
   font-size: 22px;
+  left: 94%;
+  bottom: 55px;
+  transform: translate(-50%, -50%);
+  width: 22px;
+}
+@media screen and (max-width: 320px) {
+  .like-form {
+    left: 90%;
+  }
 }
 
 .like_button {
