--- a/sass/pages/_style.scss
+++ b/sass/pages/_style.scss
@@ -258,6 +258,11 @@ main {
                     margin-right: 20px;
                 }
             }
+
+            .like-form{
+                position: unset;
+                transform: unset;
+            }
         }
     }
 
